agregamos mensaje personal

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>hola mundo</title>
 </head>
 <body>
-    <p>Hola mundo estoy aprendien a desarrolar paginas
-         </p>
+    <p>Hola mundo estoy aprendien a desarrollar paginas espero poder lograrlo, tengo que lograrlo 
+            </p>
 </body>
 </html>
